fixed z-index on carousel holder which fixed functionality

--- a/src/Home.css
+++ b/src/Home.css
@@ -20,7 +20,7 @@
 
 .carousel-holder {
   position: relative;
-  z-index: -1
+  z-index: 1;
 }
 
 .topic-text {
